--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FF6E4E</color>
+    <color name="white_main_bg">#F5F5F5</color>
+    <color name="gray_search">#80809a</color>
+    <color name="title_color">#010035</color>
 </resources>
