--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="white_main_bg">#F5F5F5</color>
     <color name="gray_search">#80809a</color>
     <color name="title_color">#010035</color>
+    <color name="black_box">#101010</color>
+    <color name="gray_price">#CCCCCC</color>
 </resources>
