--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,22 @@
         <item name="android:background">@drawable/img_iphone</item>
         <item name="cornerRadius">200dp</item>
     </style>
+    <style name="RoundedImage">
+        <item name="cornerSizeBottomRight">5%</item>
+        <item name="cornerSizeTopRight">5%</item>
+        <item name="strokeWidth">1dp</item>
+    </style>
+    <style name="Base.Button" parent="Widget.MaterialComponents.Button">
+        <item name="cornerRadius">5dp</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">98dp</item>
+        <item name="android:layout_height">23dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+    </style>
 </resources>
