--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,296 +8,52 @@
     android:background="@color/white_main_bg"
     >
 
-    <LinearLayout
-        android:id="@+id/linearLayoutPlace"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center_vertical"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="30dp"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_destination"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Zihuatanejo, Gro"
-            android:layout_marginStart="11dp"
-            android:textSize="15sp"
-            />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_list"
-            android:layout_marginStart="8dp"
-            />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_filter"
-            android:layout_marginStart="76dp"
-            />
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph" />
 
-    </LinearLayout>
-
-    <TextView
-        android:text="Select Category"
-        app:layout_constraintTop_toBottomOf="@id/linearLayoutPlace"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="18dp"
-        style="@style/Title.TextView"
-        />
-    <TextView
-        android:id="@+id/textViewAll"
-        android:text="view all"
-        app:layout_constraintTop_toBottomOf="@id/linearLayoutPlace"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="28dp"
-        style="@style/SeeMore.TextView"
-        />
-    <LinearLayout
-        android:id="@+id/linearLayoutCategory"
-        app:layout_constraintTop_toBottomOf="@id/textViewAll"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="24dp"
-        >
-        <LinearLayout
-            android:layout_width="71dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
->
-            <ImageView
-                android:layout_width="71dp"
-                android:layout_height="71dp"
-                android:src="@drawable/ic_phones"
-                android:layout_marginBottom="28dp"
-                android:background="@drawable/category_bg_color"
-                android:padding="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Phones"
-                android:textSize="12sp"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="71dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_marginHorizontal="23dp"
-            >
-            <ImageView
-                android:layout_width="71dp"
-                android:layout_height="71dp"
-                android:src="@drawable/ic_computers"
-                android:layout_marginBottom="28dp"
-                android:background="@drawable/category_bg_color"
-                android:padding="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Computer"
-                android:textSize="12sp"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="71dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            >
-            <ImageView
-                android:layout_width="71dp"
-                android:layout_height="71dp"
-                android:src="@drawable/ic_health"
-                android:layout_marginBottom="28dp"
-                android:background="@drawable/category_bg_color"
-                android:padding="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Health"
-                android:textSize="12sp"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="71dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_marginStart="23dp"
-            >
-            <ImageView
-                android:layout_width="71dp"
-                android:layout_height="71dp"
-                android:src="@drawable/ic_books"
-                android:layout_marginBottom="28dp"
-                android:background="@drawable/category_bg_color"
-                android:padding="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Books"
-                android:textSize="12sp"
-                />
-        </LinearLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/linearLayoutSearch"
-        android:layout_width="300dp"
-        android:layout_height="34dp"
-        app:layout_constraintTop_toBottomOf="@id/linearLayoutCategory"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/search_bg"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="32dp"
-        android:gravity="center_vertical"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_search_red"
-            android:layout_marginStart="24dp"
-            />
-        <EditText
-            android:layout_width="220dp"
-            android:layout_height="30dp"
-            android:text="Search"
-            android:textColor="@color/gray_search"
-            android:background="@null"
-            android:textSize="12sp"
-            android:layout_marginStart="18dp"
-            />
-
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_catalog"
-        app:layout_constraintTop_toTopOf="@id/linearLayoutSearch"
-        app:layout_constraintBottom_toBottomOf="@id/linearLayoutSearch"
-        app:layout_constraintStart_toEndOf="@id/linearLayoutSearch"
-        android:background="@drawable/catalog_bg"
-        android:padding="9.6dp"
-        android:layout_marginStart="11dp"
-        />
-
-    <TextView
-        android:text="Hot sales"
-        app:layout_constraintTop_toBottomOf="@id/linearLayoutSearch"
-        app:layout_constraintStart_toStartOf="parent"
-        style="@style/Title.TextView"
-        android:layout_marginTop="24dp"
-        />
-
-    <TextView
-        android:id="@+id/seeMoreHotSales"
-        style="@style/SeeMore.TextView"
-        android:text="see more"
-        app:layout_constraintTop_toBottomOf="@id/linearLayoutSearch"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="31dp"
-        />
-    <LinearLayout
-        android:id="@+id/linearLayoutIphone"
-        android:layout_width="170dp"
-        android:layout_height="182dp"
-        app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/linear_layout_corners"
-        android:paddingStart="30dp"
-        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/bottom_nav_bg"
+        app:itemIconTint="@drawable/bottom_nav_colors"
+        app:itemTextColor="@drawable/bottom_nav_colors"
+        app:menu="@menu/bottom_nav_menu"
+
         >
-        <TextView
-            android:layout_width="27dp"
-            android:layout_height="27dp"
-            android:text="New"
-            android:background="@drawable/catalog_bg"
-            android:textSize="10sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginTop="15dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Iphone 12"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_marginTop="12dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Súper. Mega. Rápido."
-            android:textColor="@color/white"
-            android:textSize="11sp"
-            android:layout_marginTop="5dp"
-            />
-        <com.google.android.material.button.MaterialButton
-            style="@style/Base.Button"
-            android:text="Buy now!"
-            android:layout_marginTop="25dp"
-            />
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="68dp"-->
+<!--            android:gravity="center_vertical"-->
+<!--            >-->
+<!--            <View-->
+<!--                android:layout_width="8dp"-->
+<!--                android:layout_height="8dp"-->
+<!--                android:background="@drawable/white_point"-->
+<!--                />-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Explorer"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textSize="15dp"-->
+<!--                android:textStyle="bold"-->
+<!--                android:layout_marginStart="7dp"-->
+<!--                />-->
+<!--        </LinearLayout>-->
 
-    </LinearLayout>
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/shapeableImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/seeMoreHotSales"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/img_iphone"
-        app:shapeAppearanceOverlay="@style/RoundedImage"
-        android:layout_marginTop="18dp"
-        />
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Best Seller"
-        style="@style/Title.TextView"
-        app:layout_constraintTop_toBottomOf="@id/linearLayoutIphone"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="12dp"
-        />
-    <TextView
-        android:id="@+id/seeMoreBestSellers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="see more"
-        style="@style/SeeMore.TextView"
-        app:layout_constraintTop_toBottomOf="@id/linearLayoutIphone"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewBestSellers"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/seeMoreBestSellers"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
-        tools:listitem="@layout/item_phone"
-        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
