--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -301,6 +301,7 @@
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:listitem="@layout/item_phone"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="40dp"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
