--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -47,6 +47,7 @@
                     android:textStyle="bold"/>
 
                 <ImageView
+                    android:id="@+id/imageViewLike"
                     android:layout_width="37dp"
                     android:layout_height="33dp"
                     android:layout_marginStart="58dp"
@@ -108,6 +109,7 @@
                         android:src="@drawable/ic_processor"
                         />
                     <TextView
+                        android:id="@+id/textViewProcessor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Exynos 990"
@@ -129,6 +131,7 @@
                         android:src="@drawable/ic_camera"
                         />
                     <TextView
+                        android:id="@+id/textViewCamera"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="108 + 12 mp"
@@ -147,9 +150,10 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="28dp"
-                        android:src="@drawable/ic_ram"
+                        android:src="@drawable/ic_camera"
                         />
                     <TextView
+                        android:id="@+id/textViewRam"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="8 GB"
@@ -171,6 +175,7 @@
                         android:src="@drawable/ic_ssd"
                         />
                     <TextView
+                        android:id="@+id/textViewSsd"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="256 GB"
@@ -257,6 +262,7 @@
                     android:layout_marginStart="45dp"
                     />
                 <TextView
+                    android:id="@+id/textViewPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
