--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_main_bg"
-    tools:context=".DetailFragment">
+    tools:context=".DetailFragment"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
