--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -160,8 +160,8 @@
             </LinearLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/linearLayoutSearch"
+        <SearchView
+            android:id="@+id/searchView"
             android:layout_width="300dp"
             android:layout_height="34dp"
             app:layout_constraintTop_toBottomOf="@id/linearLayoutCategory"
@@ -169,33 +169,17 @@
             android:background="@drawable/search_bg"
             android:layout_marginTop="35dp"
             android:layout_marginStart="32dp"
-            android:gravity="center_vertical"
+            android:searchIcon="@drawable/ic_search_red"
             >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_red"
-                android:layout_marginStart="24dp"
-                />
-            <EditText
-                android:layout_width="220dp"
-                android:layout_height="30dp"
-                android:text="Search"
-                android:textColor="@color/gray_search"
-                android:background="@null"
-                android:textSize="12sp"
-                android:layout_marginStart="18dp"
-                />
-
-        </LinearLayout>
+        </SearchView>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_catalog"
-            app:layout_constraintTop_toTopOf="@id/linearLayoutSearch"
-            app:layout_constraintBottom_toBottomOf="@id/linearLayoutSearch"
-            app:layout_constraintStart_toEndOf="@id/linearLayoutSearch"
+            app:layout_constraintTop_toTopOf="@id/searchView"
+            app:layout_constraintBottom_toBottomOf="@id/searchView"
+            app:layout_constraintStart_toEndOf="@id/searchView"
             android:background="@drawable/catalog_bg"
             android:padding="9.6dp"
             android:layout_marginStart="11dp"
@@ -203,7 +187,7 @@
 
         <TextView
             android:text="Hot sales"
-            app:layout_constraintTop_toBottomOf="@id/linearLayoutSearch"
+            app:layout_constraintTop_toBottomOf="@id/searchView"
             app:layout_constraintStart_toStartOf="parent"
             style="@style/Title.TextView"
             android:layout_marginTop="24dp"
@@ -213,7 +197,7 @@
             android:id="@+id/seeMoreHotSales"
             style="@style/SeeMore.TextView"
             android:text="see more"
-            app:layout_constraintTop_toBottomOf="@id/linearLayoutSearch"
+            app:layout_constraintTop_toBottomOf="@id/searchView"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="31dp"
             />
