added cart page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray_descr">#B7B7B7</color>
     <color name="brown_choose">#772D03</color>
     <color name="gray_ssd">#8D8D8D</color>
+    <color name="gray_counter">#282843</color>
 </resources>
