--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,10 @@
         <item name="cornerSizeTopRight">5%</item>
         <item name="strokeWidth">1dp</item>
     </style>
+    <style name="RoundedImageInCart">
+        <item name="cornerSize">10%</item>
+        <item name="strokeWidth">1dp</item>
+    </style>
     <style name="Base.Button" parent="Widget.MaterialComponents.Button">
         <item name="cornerRadius">5dp</item>
         <item name="android:backgroundTint">@color/white</item>
