--- a/app/src/main/res/layout/item_phone_in_cart.xml
+++ b/app/src/main/res/layout/item_phone_in_cart.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/title_color"
-    android:padding="12dp"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
     >
 <com.google.android.material.imageview.ShapeableImageView
     android:id="@+id/imageViewImage"
@@ -15,6 +15,7 @@
     android:src="@drawable/img_samsung_note"
     app:shapeAppearanceOverlay="@style/RoundedImageInCart"
     android:scaleType="centerCrop"
+    android:layout_marginStart="20dp"
     />
 
     <TextView
@@ -28,7 +29,7 @@
         android:textSize="20dp"
         android:textStyle="bold"
         android:maxWidth="156dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         />
 
     <TextView
@@ -44,6 +45,7 @@
         />
 
     <LinearLayout
+        android:id="@+id/ll_counter"
         android:layout_width="28dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/textViewName"
@@ -76,6 +78,16 @@
             android:textSize="20sp"
             />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/ll_counter"
+        app:layout_constraintBottom_toBottomOf="@id/ll_counter"
+        app:layout_constraintStart_toEndOf="@id/ll_counter"
+        android:src="@drawable/ic_delete"
+        android:layout_marginStart="20dp"
+        />
 
 
 
